Add comments tests
